--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -16,8 +16,11 @@ spring.mvc.static-path-pattern=/static/**
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=100MB
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
 file.upload-dir=uploads
 
 spring.web.resources.static-locations=classpath:/static/,file:uploads/
+
+# OpenRouter API Key
+openrouter.api.key=
