--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -4,10 +4,13 @@ spring.application.name=portfolioX
 spring.datasource.url=jdbc:mysql://localhost:3306/portfoliox
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=119882090321Luis!
 # spring.datasource.password=ZNaXOfEUXFvAbfFUkWdsGYlNEPgUwKiU
 
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
+
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
