--- a/portfolioX-backend/pom.xml
+++ b/portfolioX-backend/pom.xml
@@ -188,6 +188,14 @@
 			<version>3.35.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.4</version>
+			<scope>runtime</scope>
+		</dependency>
+
+
 		<!-- Google AI Gemini Integration -->
 
 	</dependencies>
