--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.application.name=portfolioX
 # spring.datasource.password=119882090321Luis!
 # spring.datasource.password=ZNaXOfEUXFvAbfFUkWdsGYlNEPgUwKiU
 spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
