--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -6,13 +6,15 @@ spring.application.name=portfolioX
 # spring.datasource.username=root
 # spring.datasource.password=119882090321Luis!
 # spring.datasource.password=ZNaXOfEUXFvAbfFUkWdsGYlNEPgUwKiU
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:${DATABASE_URL:}}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HBM2DDL:create}
+
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 server.error.include-stacktrace=never
