--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -10,8 +10,11 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 
@@ -21,7 +24,6 @@ server.port = 8080
 
 spring.mvc.static-path-pattern=/static/**
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
