--- a/portfoliox_frontend/package.json
+++ b/portfoliox_frontend/package.json
@@ -5,7 +5,6 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "preinstall": "npm config set optional false",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -29,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
+    "rollup": "^4.17.2",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.1"
   }
