--- a/portfoliox_frontend/netlify.toml
+++ b/portfoliox_frontend/netlify.toml
@@ -1,8 +1,7 @@
 [build]
   base = "portfoliox_frontend"
-  publish = "portfoliox_frontend/dist"
-  # Clean install + rebuild Rollup before building
-  command = "npm ci && npm rebuild rollup && npm run build"
+  publish = "dist"
+  command = "npm ci && npm run build"
 
 [build.environment]
   NODE_VERSION = "20.11.1"
