Backend Adjustment for Frontend Connection 6

--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -44,3 +44,7 @@ spring.security.oauth2.client.provider.github.authorization-uri=https://github.c
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 spring.security.oauth2.client.provider.github.user-name-attribute=login
+
+spring.security.oauth2.client.registration.github.redirect-uri=https://portfolixcapstone.netlify.app/auth/login
+frontend.url=https://portfolixcapstone.netlify.app
+# frontend.url=http://localhost:5173
