--- a/portfolioX-backend/src/main/resources/application.properties
+++ b/portfolioX-backend/src/main/resources/application.properties
@@ -45,6 +45,9 @@ spring.security.oauth2.client.provider.github.token-uri=https://github.com/login
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 spring.security.oauth2.client.provider.github.user-name-attribute=login
 
-spring.security.oauth2.client.registration.github.redirect-uri=https://portfolixcapstone.netlify.app/auth/login
+# GitHub OAuth callback - GitHub redirects HERE after authentication
+spring.security.oauth2.client.registration.github.redirect-uri=https://portfolioxbackend.onrender.com/login/oauth2/code/github
+
+# Frontend URL - Backend redirects to frontend after processing OAuth
 frontend.url=https://portfolixcapstone.netlify.app
 # frontend.url=http://localhost:5173
